# tracerail-task-bridge

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
app/: bridge.py
pacts/: TracerailActionCenter-TracerailAPI.json
src/app/: bridge.py  tracing.py
tests/: __init__.py  test_case_creation.py  test_metrics.py  test_pact_verification.py
